--- a/src/app/friend-with-updates/friend-with-updates.component.html
+++ b/src/app/friend-with-updates/friend-with-updates.component.html
@@ -1,18 +1,28 @@
-<input type="email" placeholder="My email">
-<button>List Friends with Updates</button>
+<input type="email" placeholder="My email" #account>
+<button (click)="showMySubscription(account.value)">List Friends with Updates</button>
  
 
-<table>
-<thead>
-<tr>
-    <th><input type="radio"></th>
-    <th>My Friend</th>
-</tr>
-</thead>
-<tbody>
-    <tr>
-        <td></td>
-        <td>email</td>
-    </tr>
-</tbody>
-</table>
+<div class="container" *ngIf="myFriends">
+    <div class="row">
+      <div class="col-12">
+        <table>
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">My Subscribed Friends</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let f of myFriends"> 
+              <td>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" >
+                </div>
+              </td>
+              <td>{{f}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
